# banshee-musiccube

./: Banshee.MusicCube.addin.xml  Banshee.MusicCube.csproj  Banshee.MusicCube.make  Banshee.MusicCube.sln  Banshee.MusicCube.userprefs  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  musiccube.patch  setup.sh
Banshee.MusicCube/: Coordinates.cs  MusicCubeActions.cs  MusicCubeService.cs  RandomByProximity.cs  addin-xml-strings.cs
Resources/: GlobalUI.xml
musiccube/: analyzer.py  banshee.py  detector.py  musiccube.py  numbacube.py  progress.py
po/: HOWTO  de.po
sql/: create_view.sql  cube_queries.sql
